[package]
name = "gv_video"
version = "0.1.11"
edition = "2021"
description = "GV Video Decoder for Rust"
license = "Zlib"
repository = "https://github.com/funatsufumiya/rust-gv-video"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[features]
default = ["unsafe"]
# default = []
unsafe = []

[dependencies]
byteorder = "1.5.0"
lz4_flex = { version = "0.11", default-features = false }
texture2ddecoder = { version = "0.0.5" }
paste = "^1.0.12"
# texture2ddecoder = { git = "https://github.com/autergame/texture2ddecoder", rev = "6a5e8ea", version = "0.0.6" } # for bc2 decode
